implement refresh token api and fixing some bugs
