# api/controllers/UserController.js
@@ -1,25 +1,34 @@
 var userMdl = require("../models/User");
 var cacheServie = require("../services/cache");
 const { v4: uuidv4 } = require("uuid");
-const { jwtSign } = require("../services/jwtService");
+const { jwtSign, jwtVerify } = require("../services/jwtService");
 const bcrypt = require("bcrypt");
 
 module.exports = {
   allUsser: async (req, res) => {
-    var userId = req.userId;
-    var response = await userMdl.getUserInfo((cacheKey = "default"), {}, {});
-    return res.json(response);
+    var response = await userMdl.getUserInfo("default", {}, {});
+    return res.Ok("OK", response);
   },
 
   getUserByUsername: async (req, res) => {
-    var username = req.body;
-    var userInfo = await userMdl.getUserByKey(
-      { username: username },
-      { password: -1 },
-      (isCached = true)
-    );
-    if (userInfo) return res.Ok("OK", userInfo);
-    else return res.NotFound("data not found  ", []);
+    try {
+      const { username } = req.query.username;
+      console.log("username", username);
+      var userInfo = await userMdl.getUserByKey(
+        { username: username },
+        { password: -1 },
+        (isCached = false)
+      );
+      if (userInfo) return res.Ok("OK", userInfo);
+      else return res.NotFound("data not found ", []);
+    } catch (e) {
+      return res.InternalError("Error", {
+        success: false,
+        error: { message: e },
+        data: [],
+      });
+    } finally {
+    }
   },
 
   signup: async (req, res) => {
@@ -30,12 +39,10 @@ module.exports = {
         { password: hash, access_token: " ", refresh_token: " " },
         { firstName, lastName, email, username }
       );
-      console.log("userObj", userObj);
       const result = await userMdl.insertUser(userObj);
-      console.log("result", result);
-      return res.status(201).send(result);
+      return res.Created("the record is created", result);
     } catch (e) {
-      return res.status(409).send({
+      return res.Conflict("duplicated record", {
         success: false,
         error: { message: e },
         data: [],
@@ -50,9 +57,14 @@ module.exports = {
       const hash = await bcrypt.hash(password, 10);
       const userInfo = await userMdl.getUserByKey({ email: email });
       if (userInfo) {
-        delete userInfo.password;
-        var accessToken = jwtSign({ email: email });
-        var refreshToken = uuidv4();
+        var accessToken = jwtSign(
+          {
+            email: email,
+            username: userInfo.username,
+          },
+          0
+        );
+        var refreshToken = jwtSign({ email: email }, 1);
         var updatedDoc = await userMdl.updateUserInfo(
           { email: email },
           {
@@ -60,7 +72,7 @@ module.exports = {
             refresh_token: refreshToken,
           }
         );
-        return res.status(200).send({
+        return res.Ok("OK", {
           access_token: accessToken,
           refresh_token: refreshToken,
         });
@@ -68,7 +80,56 @@ module.exports = {
         res.status(400).send([]);
       }
     } catch (e) {
-      console.log("signin Error", e);
+      return res.InternalError("Error", {
+        success: false,
+        error: { message: e },
+        data: [],
+      });
+    } finally {
+    }
+  },
+
+  newRefreshToken: async (req, res) => {
+    try {
+      const { refreshToken } = req.body;
+      // Verifying refresh token
+      var result = jwtVerify(refreshToken, 1);
+      if (!result) {
+        return res.Forbiden("Unauthorized", []);
+      } else {
+        const userInfo = await userMdl.getUserByKey({
+          refresh_token: refreshToken,
+        });
+        if (userInfo) {
+          var accessToken = jwtSign(
+            {
+              email: userInfo.email,
+              username: userInfo.username,
+            },
+            1
+          );
+          var newRefreshToken = jwtSign({ email: userInfo.email }, 1);
+          var updatedDoc = await userMdl.updateUserInfo(
+            { email: userInfo.email },
+            {
+              access_token: accessToken,
+              refresh_token: newRefreshToken,
+            }
+          );
+          return res.Ok("OK", {
+            access_token: accessToken,
+            refresh_token: refreshToken,
+          });
+        } else {
+          return res.Forbiden("Unauthorized", []);
+        }
+      }
+    } catch (e) {
+      return res.InternalError("Error", {
+        success: false,
+        error: { message: e },
+        data: [],
+      });
     } finally {
     }
   },
